[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
md5 = "0.7.0"
pretty_env_logger = "0.4.0"
sha2 = "0.10.6"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
